syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateShadowDiskBasedCheckpointRequest {
    types.Disk Disk = 1;
    string CheckpointIdPrefix = 2;
}

message CreateShadowDiskBasedCheckpointResponse {
    string CheckpointId = 1;
}

message CreateShadowDiskBasedCheckpointTaskState {
    int32 CheckpointIteration = 1;
    string CheckpointId = 2;
}

message CreateShadowDiskBasedCheckpointMetadata {
    string CheckpointId = 1;
}
